--- a/src/component/BusList/BusList.scss
+++ b/src/component/BusList/BusList.scss
@@ -24,6 +24,11 @@
         color: blue;
         margin-bottom: 0;
     }
+    .logo-copyright{
+        display: flex;
+        margin-top: 2rem;
+        justify-content: space-around;
+    }
 }
 .interact-box {
     margin-top: 3rem;
